--- a/Quizos/src/QuizApp.css
+++ b/Quizos/src/QuizApp.css
@@ -1,48 +1,70 @@
 .app-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .quiz-container {
-    max-width: 500px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-  }
-  
-  .quiz-title {
-    text-align: center;
-    font-size: 24px;
-    margin-top: 0;
-  }
-  
-  .quiz-result {
-    font-size: 18px;
-    text-align: center;
-  }
-  
-  .quiz-question {
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
-  
-  .quiz-next-btn {
-    display: block;
-    margin-top: 10px;
-    padding: 8px 16px;
-    border: none;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: #fff;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .quiz-next-btn:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-image: url("background-image.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.quiz-container {
+  max-width: 500px;
+  padding: 20px;
+  border: none;
+  border-radius: 10px;
+  background: linear-gradient(135deg, rgba(9, 44, 76, 0.8), rgba(5, 25, 50, 0.8));
+  backdrop-filter: blur(5px);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #fff;
+  font-family: Arial, sans-serif;
+}
+
+
+.quiz-title {
+  text-align: center;
+  font-size: 28px;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.quiz-result {
+  font-size: 18px;
+  text-align: center;
+}
+
+.quiz-question {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+.quiz-options {
+  margin-bottom: 20px;
+}
+.quiz-option {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+.quiz-option input[type="radio"] {
+  margin-right: 10px;
+}
+.quiz-next-btn {
+  display: block;
+  margin-top: 10px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+   background-color: #ff6b4a; /* Set the desired background color */
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.quiz-next-btn:disabled {
+  background-color: #0056b3; /* Set the desired background color */
+  color: #fff;
+  cursor: not-allowed;
+}
+.quiz-next-btn:hover {
+  background-color: #0056b3;
+}
