--- a/Quizos/src/styles/QuizApp.css
+++ b/Quizos/src/styles/QuizApp.css
@@ -1,70 +1,52 @@
-.app-container {
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #f3f5f9;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url("background-image.jpg");
-  background-size: cover;
-  background-position: center;
 }
 
-.quiz-container {
-  max-width: 500px;
-  padding: 20px;
-  border: none;
+.login-container {
+  width: 400px;
+  background-color: #fff;
   border-radius: 10px;
-  background: linear-gradient(135deg, rgba(9, 44, 76, 0.8), rgba(5, 25, 50, 0.8));
-  backdrop-filter: blur(5px);
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
-  color: #fff;
-  font-family: Arial, sans-serif;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-
-.quiz-title {
-  text-align: center;
-  font-size: 28px;
-  margin-top: 0;
-  margin-bottom: 20px;
+.login-card {
+  padding: 40px;
 }
 
-.quiz-result {
-  font-size: 18px;
-  text-align: center;
-}
-
-.quiz-question {
+h1 {
   font-size: 24px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+  text-align: center;
 }
-.quiz-options {
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  padding: 10px;
   margin-bottom: 20px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
 }
-.quiz-option {
-  display: block;
-  margin-bottom: 10px;
-  font-size: 18px;
-}
-.quiz-option input[type="radio"] {
-  margin-right: 10px;
-}
-.quiz-next-btn {
-  display: block;
-  margin-top: 10px;
-  padding: 10px 20px;
+
+button {
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
   border: none;
-  border-radius: 5px;
-   background-color: #ff6b4a; /* Set the desired background color */
-  color: #fff;
-  font-size: 18px;
+  border-radius: 4px;
+  font-size: 16px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
 }
-.quiz-next-btn:disabled {
-  background-color: #0056b3; /* Set the desired background color */
-  color: #fff;
-  cursor: not-allowed;
-}
-.quiz-next-btn:hover {
+
+button:hover {
   background-color: #0056b3;
 }
