--- a/Quizos/src/styles/login.css
+++ b/Quizos/src/styles/login.css
@@ -4,7 +4,10 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #f8f8f8;
+  background-image: url('background.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 h1 {
